--- a/spool.html
+++ b/spool.html
@@ -1,34 +1,20 @@
-<script type="text/x-red" data-template-name="spooldb">
-    <div class="form-row">
-        <label for="node-config-input-db"><i class="fa fa-database"></i> Database</label>
-		<input type="text" id="node-config-input-db" placeholder="/tmp/sqlite">
-		<br>Standard path examples with globally installed Node-Red<br>Windows: ../node-red-contrib-spool/sqlite<br>Linux: /tmp/sqlite
-    </div>
-</script>
-
-<script type="text/javascript">
-    RED.nodes.registerType('spooldb',
-	{
-        category: 'config',
-        defaults: 
-		{
-            db: {value:"",required:true}
-        },
-        label: function() 
-		{
-            return this.db;
-        }
-    });
-</script>
-
 <script type="text/x-red" data-template-name="spool">
-    <div class="form-row">
-        <label for="node-input-mydb"><i class="fa fa-database"></i> Database</label>
-        <input type="text" id="node-input-mydb">
-    </div>
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+	<div class="form-row">
+        <label for="node-input-connStatusText"><i class="icon-tag"></i> "Connected"<br>status text</label>
+        <input type="text" id="node-input-connStatusText" placeholder="status.connected">
+    </div>  
+	<div class="form-row">
+        <label for="node-input-disconnStatusText"><i class="icon-tag"></i> "Disconnected"<br>status text</label>
+        <input type="text" id="node-input-disconnStatusText" placeholder="status.disconnected">
+    </div>
+	<div class="form-row">
+        <label for="node-input-dbname"><i class="fa fa-database"></i> Database</label>
+		<input type="text" id="node-input-dbname" placeholder="/tmp/sqlite">
+		<br>Standard path examples with globally installed Node-Red<br>Windows: sqlite<br>Linux: /tmp/sqlite
     </div>
 </script>
 
@@ -43,11 +29,13 @@
         color: '#8B4513',
         defaults: 
 		{
-			mydb: {type:"spooldb",required:true},
-            name: {value:""}
+            name: {value: ""},
+			connStatusText: {value: "status.connected"},
+			disconnStatusText: {value: "status.disconnected"},
+			dbname: {value: "", required: true}
         },
-        inputs:1,
-        outputs:1,
+        inputs: 1,
+        outputs: 1,
         icon: "db.png",
         label: function() 
 		{
